Se agrego equipos y encuentro, se actualizo el webpack.config.js, y se dinamizó el llamado a los componentes react

--- a/Prode.Web/Views/Shared/_Layout.cshtml
+++ b/Prode.Web/Views/Shared/_Layout.cshtml
@@ -7,8 +7,8 @@
     <title>@ViewBag.Title</title>
 </head>
 <body>
-    <div id="app">
-
+    <div id="main">
+        @RenderBody()
     </div>
 </body>
 </html>
