Optimización de nombre de variable

--- a/Prode.Web/Views/Home/Index.cshtml
+++ b/Prode.Web/Views/Home/Index.cshtml
@@ -6,4 +6,4 @@
 
 <div id="app"></div>
 <script src="@Url.Content("~/bundle/"
-            + this.Model.Name + ".bundle.js")"></script>
+            + this.Model.BundleName + ".bundle.js")"></script>
