--- a/Prode.Web/Views/Home/Index.cshtml
+++ b/Prode.Web/Views/Home/Index.cshtml
@@ -1,9 +1,7 @@
-﻿@model Prode.Web.Models.ReactComponent
+﻿
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div id="app"></div>
-<script src="@Url.Content("~/bundle/"
-            + this.Model.BundleName + ".bundle.js")"></script>
+<h2>Index</h2>
