--- a/Prode.Web/Views/Shared/_Layout.cshtml
+++ b/Prode.Web/Views/Shared/_Layout.cshtml
@@ -4,11 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
+    <link href="~/Content/bootstrap.css" rel="stylesheet" />
     <title>@ViewBag.Title</title>
 </head>
 <body>
-    <div id="main">
-        @RenderBody()
-    </div>
+    @RenderBody()
 </body>
 </html>
