--- a/Prode.Web/Views/Shared/_Layout.cshtml
+++ b/Prode.Web/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
+    <link href="~/favicon.ico" type="image/x-icon" rel="icon" />
     <title>@ViewBag.Title</title>
 </head>
 <body>
