se agregaron componentes tabla y select para dividir responsabilidades

--- a/Prode.Web/Views/Shared/_Layout.cshtml
+++ b/Prode.Web/Views/Shared/_Layout.cshtml
@@ -9,6 +9,8 @@
     <title>@ViewBag.Title</title>
 </head>
 <body>
-    @RenderBody()
+    <div class="container">
+        @RenderBody()
+    </div>
 </body>
 </html>
